//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Client {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  orders Order [not null]
  messages Message [not null]
}

Table Producer {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  address String [not null]
  email String [unique, not null]
  password String [not null]
  products Product [not null]
  messages Message [not null]
}

Table Admin {
  id String [pk]
  firstName String [not null]
  lastName String [not null]
  email String [unique, not null]
  password String [not null]
  messages Message [not null]
}

Table Order {
  id String [pk]
  products ProductOrder [not null]
  status OrderStatus [not null]
  date DateTime [default: `now()`, not null]
  clientId String [not null]
  client Client [not null]
}

Table Product {
  id String [pk]
  name String [not null]
  stock Int [not null]
  producerId String [not null]
  producer Producer [not null]
  orders ProductOrder [not null]
}

Table ProductOrder {
  productId String [not null]
  orderId String [not null]
  product Product [not null]
  order Order [not null]

  indexes {
    (productId, orderId) [pk]
  }
}

Table Message {
  id String [pk]
  content String [not null]
  sender String [not null]
  client Client
  clientId String
  producer Producer
  producerId String
  admin Admin
  adminId String
}

Enum OrderStatus {
  PENDING
  READY
  DELIVERED
  CANCELLED
}

Ref: Order.clientId > Client.id

Ref: Product.producerId > Producer.id

Ref: ProductOrder.productId > Product.id

Ref: ProductOrder.orderId > Order.id

Ref: Message.clientId > Client.id

Ref: Message.producerId > Producer.id

Ref: Message.adminId > Admin.id